[package]
name = "bridge"
description = "Soon bridge program"
version = "1.0.0"
authors = ["Soon Labs <maintainers@soon.foundation>"]
repository = "https://github.com/soonlabs/soon/contracts/l2/svm-withdraw-bridge"
homepage = "https://www.soo.network/"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.7"
bytemuck = "1.16.1"
num-derive = "0.4"
num-traits = "0.2"
solana-program = "2.0.4"
thiserror = "1.0"
ethnum = "1.5.0"
serde = "1.0.203"
ethabi = "18.0.0"
keccak-hash = "0.10.0"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "4.0.0", features = ["no-entrypoint"] }
tokio = "1.43.0"
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"

[lib]
name = "bridge"
crate-type = ["cdylib", "lib"]

[dev-dependencies]
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
tokio = "1.43.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
